Replace RSocket with custom RPC implementation based on reactor-netty #758 + Decouple services #759 + Trivial enhancements